--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -5,6 +5,28 @@ title: Le Wagon - Middleman - About
 <div id="about">
   <div class="about-content">
     <h1>This template was built with <i class="fa fa-heart"></i> by</h1>
+    <ul class="list-inline text-center">
+      <% data.users.each do |user| %>
+      <li>
+        <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{user.github_nickname}", class: "img-circle" %>
+        <h2><%= user.name.capitalize %></h2>
+        <p>
+          <i class="fa fa-github"></i>
+          <%= link_to user.github_nickname, "https://github.com/#{user.github_nickname}" %>
+        </p>
+      </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
+
+
+
+
+<!-- <div id="about">
+  <div class="about-content">
+    <h1>This template was built with <i class="fa fa-heart"></i> by</h1>
     <ul class="list-inline">
       <% data.users.each do |user| %>
         <li>
@@ -21,4 +43,4 @@ title: Le Wagon - Middleman - About
       <% end %>
     </ul>
   </div>
-</div>
+</div> -->
