--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 #home {
   background-color: #D23333;
   color: white;
-  height: 100vh;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
