finished home and team page

--- a/source/stylesheets/pages/_about.scss
+++ b/source/stylesheets/pages/_about.scss
@@ -14,20 +14,20 @@
     font-weight: bolder;
     margin-bottom: 30px;
     margin-top: 0px;
-    color: rgba(0,0,0,0.7);
+    color: $darkgray;
   }
   h2 {
     font-size: 17px;
     font-weight: bold;
-    color: rgba(0,0,0,0.6);
+    color: $darkgray;
   }
   a {
-    color: rgba(0,0,0,0.25);
+    color: $lightgray;
     font-weight: bold;
     letter-spacing: -0.5px;
     font-size: 15px;
   }
   .fa-heart {
-    color: #D23333;
+    color: $red;
   }
 }
