--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -6,5 +6,6 @@ $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
-$gray: #000000;
-$light-gray: #F4F4F4;
+$darkgray: rgba(0,0,0,0.6);
+$gray: rgba(0,0,0,0.3);
+$lightgray: rgba(0,0,0,0.1);
