finished home and team page

--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
   <!-- Logo -->
 <!--   <a href="/" class="navbar-wagon-brand"> -->
 
-  <%= link_to image_tag("logo.png"), "/index.html", class: "navbar-wagon-brand" %>
+  <%= link_to image_tag("logo.png"), "index.html", class: "navbar-wagon-brand" %>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
@@ -10,7 +10,7 @@
     <a href="" class="navbar-wagon-item navbar-wagon-link">Trips</a>
     <a href="" class="navbar-wagon-item navbar-wagon-link">Messages</a>
 
-    <%= link_to "About", "/about.html", class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "About", "about.html", class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Profile picture with dropdown list -->
     <div class="navbar-wagon-item">
