--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,48 +11,29 @@ title: Home Page
         <a class="btn btn-primary btn-lg">Start now</a>
       </div>
     </div>
-    <div class="container">
+    <div class="container" id="cards">
       <div class="row">
+        <% data.flats.each do |owner, flat| %> <!-- becasue it is a has of hashes! -->
+
         <div class="col-xs-12 col-sm-4">
-          <!-- insert <div class="card"> -->
-            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
-              <div class="card-category">Popular</div>
+          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/<%= flat.city_slug %>');">
+              <div class="card-category">
+                <p><%= flat.city_name.upcase %></p>
+              </div>
               <div class="card-description">
-                <h2>Le Wagon Shanghai</h2>
-                <p>Very cool city, the best</p>
+                <h2><%= flat.name %></h2>
+                <p><%= flat.description %></p>
+                <p><%= flat.rating %></p>
               </div>
-              <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
+              <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/<%= flat.gh_username %>"
               <a class="card-link" href="#" ></a>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <!-- insert <div class="card"> -->
-              <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
-                <div class="card-category">Popular</div>
-                <div class="card-description">
-                  <h2>Le Wagon Shanghai</h2>
-                  <p>Very cool city, the best</p>
-                </div>
-                <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
-                <a class="card-link" href="#" ></a>
-              </div>
-            </div>
-            <div class="col-xs-12 col-sm-4">
-              <!-- insert <div class="card"> -->
-                <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
-                  <div class="card-category">Popular</div>
-                  <div class="card-description">
-                    <h2>Le Wagon Shanghai</h2>
-                    <p>Very cool city, the best</p>
-                  </div>
-                  <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
-                  <a class="card-link" href="#" ></a>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
+
+        <% end %>
+
       </div>
     </div>
   </div>
+</div>
 
