--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -17,15 +17,20 @@
 }
 .card-category {
   position: absolute;
-  top: 10px;
+  top: 0px;
   left: 10px;
   font-size: 15px;
   text-transform: uppercase;
+  p {
+    margin-top: 0px;
+  }
 }
 .card-description {
   position: absolute;
   bottom: 10px;
   left: 10px;
+  text-align: left;
+
 }
 .card-description h2 {
   font-size: 24px;
